<resources>
    <string name="app_name">CRManager</string>

    <!-- Login Strings -->
    <string name="email">E-Mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="signup">Não possui uma conta? Cadastre-se!</string>

    <string name="startLogin">Fazendo login</string>
    <string name="pleaseStandBy">Por favor, aguarde&#8230;</string>
    <string name="couldNotLogin">Não foi possível fazer o login! Verifique o e-mail e a senha e tente novamente.</string>

    <!-- Main Strings -->
    <string name="addressList">Endereços:</string>
    <string name="defaultFullName">-</string>
    <string name="defaultCPFAndCR">CPF: - | CR: -</string>
    <string name="defaultAddress">-</string>

    <string name="couldNotRetrieveUserProfileInfo">Não foi possível resgatar informações do usuário!</string>
    <string name="couldNotRetrieveProcessList">Não foi possível resgatar lista de processos do usuário!</string>

    <!-- ProcessAdd Strings -->
    <string name="mandatory">* Campos obrigatórios</string>
    <string name="addProcess">Adicionar Processo</string>
    <string name="protocolNumber">Nº de Protocolo: *</string>
    <string name="entryDate">Data de Entrada: *</string>
    <string name="serviceType">Tipo de Serviço: *</string>
    <string name="status">Status: *</string>
    <string name="reason">Motivo:</string>
    <string name="OM">Organização Militar (OM): *</string>
    <string name="gruStatus">Status da GRU: *</string>
    <string name="gruEntryDate">Data de Compensação da GRU:</string>
    <string name="PCE">Produto Controlado (PCE):</string>
    <string name="name">Nome:</string>
    <string name="manufacturer">Fabricante:</string>
    <string name="pceType">Tipo de PCE:</string>
    <string name="quantity">Quantidade:</string>

    <string name="add">Cadastrar</string>

    <string name="addRequiredFieldsWarning">Por favor, preencha todos os campos obrigatórios!</string>
    <string name="addingProcess">Adicionando processo</string>
    <string name="couldNotCreateProcess">Não foi possível criar o processo!</string>
    <string name="processAdded">Processo adicionado!</string>

    <!-- ProcessDetail Strings -->
    <string name="emptyValue">-</string>
    <string name="protocolNumberDetail">Nº de Protocolo: </string>
    <string name="entryDateDetail">Data de Entrada: </string>
    <string name="serviceTypeDetail">Tipo de Serviço: </string>
    <string name="statusDetail">Status: </string>
    <string name="OMDetail">Organização Militar (OM): </string>
    <string name="gruStatusDetail">Status da GRU: </string>
    <string name="gruEntryDateDetail">Data de Compensação da GRU: </string>
    <string name="PCEDetail">Produto Controlado (PCE): </string>
    <string name="nameDetail">Nome: </string>
    <string name="manufacturerDetail">Fabricante: </string>
    <string name="pceTypeDetail">Tipo de PCE: </string>
    <string name="quantityDetail">Quantidade: </string>

    <string name="edit">Editar</string>
    <string name="delete">Remover</string>

    <string name="confirmDeleteTitle">Remover processo</string>
    <string name="confirmDeleteDialog">Tem certeza que deseja remover este processo?</string>
    <string name="removingProcess">Removendo processo</string>
    <string name="processDeletedMessage">Processo removido com sucesso!</string>
    <string name="couldNotDeleteProcessMessage">Não foi possível remover o processo!</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <!-- SignUp Strings -->
    <string name="userSignUp">Cadastro de Usuário</string>
    <string name="fullNameRequired">Nome completo: *</string>
    <string name="emailRequired">E-mail: *</string>
    <string name="passwordRequired">Senha: *</string>
    <string name="passwordConfirmRequired">Confirme a senha: *</string>
    <string name="birthdayRequired">Data de nascimento: *</string>
    <string name="cpfRequired">CPF: *</string>
    <string name="rgRequired">RG: *</string>
    <string name="photo">URL da foto: </string>

    <string name="userAddress">Endereço de Acervo</string>
    <string name="secondUserAddress">Segundo Endereço de Acervo</string>

    <string name="addressRequired">Endereço: *</string>
    <string name="numberRequired">Número: *</string>
    <string name="zipCodeRequired">CEP: *</string>
    <string name="neighborhoodRequired">Bairro: *</string>
    <string name="cityRequired">Cidade: *</string>
    <string name="ufRequired">UF: *</string>

    <string name="address">Endereço: </string>
    <string name="number">Número: </string>
    <string name="complement">Complemento: </string>
    <string name="zipCode">CEP: </string>
    <string name="neighborhood">Bairro: </string>
    <string name="city">Cidade: </string>
    <string name="uf">UF: </string>

    <string name="registryCertificate">Certificado de Registro (CR)</string>
    <string name="crNumber">Número: </string>
    <string name="crExpiratonDate">Data de validade: </string>
    <string name="crRM">Região Militar (RM): </string>
    <string name="crActivities">Atividades Autorizadas: </string>

    <string name="sportShooting">Tiro Desportivo</string>
    <string name="hunt">Caça</string>
    <string name="collection">Colecionamento</string>

    <string name="checkPassword">Senhas diferentes! Verifique a senha inserida e tente novamente</string>

    <string name="signUpUser">Cadastrar-se</string>
    <string name="couldNotCreateUser">Não foi possível cadastrar seu usuário! Tente novamente mais tarde</string>
    <string name="userCreateSuccessful">Usuário criado com sucesso!</string>

    <!-- UserProfileDetail Strings -->
    <string name="userInformations">Informações do Usuário</string>

    <string name="fullNameDetail">Nome completo: </string>
    <string name="emailDetail">E-mail: </string>
    <string name="passwordDetail">Senha: </string>
    <string name="passwordConfirmDetail">Confirme a senha: </string>
    <string name="birthdayDetail">Data de nascimento: </string>
    <string name="cpfDetail">CPF: </string>
    <string name="rgDetail">RG: </string>

    <!-- ProcessEdit Strings -->
    <string name="editProcess">Editar Processo</string>
    <string name="editingProcess">Editando processo</string>
    <string name="processEditedMessage">Processo editado com sucesso!</string>
    <string name="couldNotEditProcess">Não foi possível editar o processo! Tente novamente mais tarde</string>
</resources>