<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crmanager_colorPrimary"
    tools:context=".ProcessEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/editProcess" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/mandatory" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/protocolNumber" />

                    <EditText
                        android:id="@+id/editTextProtocolNumberEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/entryDate" />

                    <EditText
                        android:id="@+id/editTextEntryDateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/serviceType" />

                    <Spinner
                        android:id="@+id/serviceTypeSpinnerEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/status" />

                    <Spinner
                        android:id="@+id/processStatusSpinnerEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/reason" />

                    <EditText
                        android:id="@+id/editTextReasonEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text"
                        android:maxLength="255" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/OM" />

                    <EditText
                        android:id="@+id/editTextOMEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text"
                        android:maxLength="100" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/gruStatus" />

                    <Spinner
                        android:id="@+id/processGRUStatusSpinnerEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/gruEntryDate" />

                    <EditText
                        android:id="@+id/editTextGRUEntryDateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="16sp"
                        android:layout_margin="10dp"
                        android:text="@string/PCE" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="12sp"
                        android:layout_margin="10dp"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/editTextPCENameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="12sp"
                        android:layout_margin="10dp"
                        android:text="@string/manufacturer" />

                    <EditText
                        android:id="@+id/editTextPCEManufacturerEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="12sp"
                        android:layout_margin="10dp"
                        android:text="@string/pceType" />

                    <Spinner
                        android:id="@+id/processPCETypeEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:textSize="12sp"
                        android:layout_margin="10dp"
                        android:text="@string/quantity" />

                    <EditText
                        android:id="@+id/editTextPCEQuantityEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_margin="5dp"
                        android:textColor="@color/crmanager_colorPrimaryDark"
                        android:fontFamily="@font/montserrat_medium"
                        android:inputType="numberSigned" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/addProcessButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/crmanager_colorPrimaryDark"
                android:text="@string/edit" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>